fix: wrap img into button, so it can be disabled when loading is in process

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,17 @@
   position: relative;
 }
 
-.clear-button {
+button {
+  background: none;
+  border: none;
   cursor: pointer;
+  outline: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
 
 .spinner {
